compiler/driver/tests/snapshots/diagnostics_snapshots__diag_match_non_exhaustive.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E023]: non-exhaustive match: missing variant `B`
  --> test.ny:4:19
   |
  4 |     print(v)
   |                   ^
   = help: add a match arm for this variant, or use `_` as a wildcard
